# Donut

./: CMakeLists.txt  Misc.cpp  Misc.h  MyDonut  README.md  Sphere.cpp  Sphere.h  Terminal.cpp  Terminal.h  main  main.cpp  misc.cpp  misc.h  terminal.cpp  terminal.h  vec3.h
src/: Misc.cpp  Terminal.cpp  Vec2.h  Vec3.h  main.cpp
